--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       <input type="number" name="user_id" placeholder="Enter User ID" />
       <input type="submit" value="Login" />
     </form>
+   <div class="user-section" id="userSection">
+
     <div id="error-message" style="display: none;"></div>
 
     <div class="menu-section">
