--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@ ejs so we can add js and routes -->
 <html>
 <head>
     <title>Food App</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/mainn.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
 <body>
   <div class="nav-bar" id="top">
     <div class="menu-section">
@@ -141,13 +142,16 @@ ejs so we can add js and routes -->
     </div>
       <div class="contact-form">
         <h2>Leave a Message</h2>
-        <form action="/submit_form" method="post">
+        <form id="contact-form" action="/submit_form" method="post">
           <input type="text" id="name" name="name" placeholder="First Name">
+          <input type="text" id="name" name="name" placeholder="Last Name">
           <input type="text" id="email" name="email" placeholder="Your Email">
           <input type="text" id="phone" name="phone" placeholder="Your Phone Number">
           <textarea id="message" name="message" placeholder="Your Message"></textarea>
           <input type="submit" value="Submit">
         </form>
+        <div id="form-error-message" style="display: none; color: red;"></div>
+        <div id="form-success-message" style="display: none; color: green;"></div>
         <div class="our-contact">
           <h3>Our Contact Information</h3>
           <p>Email: info@example.com</p>
@@ -159,5 +163,6 @@ ejs so we can add js and routes -->
 
     <script src="scripts/icon.js"></script>
     <script src="scripts/cart.js"></script>
+    <script src="scripts/users.js"></script>
 </body>
 </html>
